--- a/src/app/components/items-list/items-list.component.html
+++ b/src/app/components/items-list/items-list.component.html
@@ -1,11 +1,11 @@
 
 <div class="search">
   <label for="search">Search</label>
-  <input [ngModel]='searchInputValue' (ngModelChange)='onSearchChange($event)'/>
+  <input [ngModel]='searchInputValue' (ngModelChange)='onSearchChange($event)' />
 </div>
 
 <div class="item-list-wrapper">
-  <div (click)="openSeparatePage(item)" class="single-item" *ngFor="let item of allItems;" [attr.data-id] = "item.id">
+  <div (click)="openSeparatePage(item.id)" class="single-item" *ngFor="let item of allItems;" [attr.data-id] = "item.id">
     <p class="company-name">{{item.company}}</p>
     <p class="company-owner">{{item.name}}</p>
     <img
