catching server error

--- a/src/app/components/item-details/item-details.component.scss
+++ b/src/app/components/item-details/item-details.component.scss
@@ -1,6 +1,6 @@
 :host {
   max-width: 1000px;
-  margin: 32px;
+  margin: 32px auto;
   display: flex;
   justify-content: center;
   align-items: center;
