--- a/src/app/components/items-list/items-list.component.scss
+++ b/src/app/components/items-list/items-list.component.scss
@@ -28,6 +28,7 @@
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
+    max-width: 1200px;
 
     .hide {
       display: none;
