--- a/src/app/components/item-details/item-details.component.html
+++ b/src/app/components/item-details/item-details.component.html
@@ -16,9 +16,9 @@
       />
       <section class="details">
         <h3>Owner: {{companyDetails.name}}</h3>
-        <p class=""><strong>Latitude: </strong>{{companyDetails.latitude}}</p>
-        <p class=""><strong>Longitude: </strong>{{companyDetails.longitude}}</p>
-        <p class=""><strong>Tags:</strong> {{companyDetails.tags.join(' | ')}}</p>
+        <p><strong>Latitude: </strong>{{companyDetails.latitude}}</p>
+        <p><strong>Longitude: </strong>{{companyDetails.longitude}}</p>
+        <p><strong>Tags:</strong> {{companyDetails.tags.join(' | ')}}</p>
       </section>
     </div>
     <p class="description">{{companyDetails.description}}</p>
